# toolbox

./: .clangd  CMakeLists.txt  README.md  modules.yaml
src/cpp.17/: base64.hpp  sha1.hpp
src/cpp.20/: AnyRef.hpp  FixSizeVector.hpp  FunctionView.hpp  OpenHashMap.hpp  TypeName.hpp  flatmap.hpp  json.hpp  module2header.hpp  utf8.hpp
src/modules/: flatmap.cppm  json.cppm  modules.yaml  type_name.cppm  utf8.cppm
tests/: CMakeLists.txt
tests/cpp.17/: CMakeLists.txt  base64.cpp  sha1.cpp
tests/cpp.20/: AnyRef.cpp  CMakeLists.txt  FunctionView.cpp  OpenHashMap.cpp  TypeName.cpp  json.cpp
tests/modules/: CMakeLists.txt  json.cpp  modules.yaml  type_name.cpp  utf8.cpp
